[package]
name = "wldrop"
version = "1.0.0"
edition = "2024"

[dependencies]
calloop = "0.13"
calloop-wayland-source = "0.3"
libc = "0.2"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
